--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
@@ -1,16 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
-    <EditText android:id="@+id/edit_message"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_message" />
-    <Button
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"
-        android:onClick="sendMessage"/>
-</LinearLayout>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Click on the compass to start"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_gravity="center" />
+
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="372dp"
+        android:id="@+id/imageButton"
+        android:src="@drawable/compass"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:onClick="sendMessage" />
+</GridLayout>
