--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
@@ -21,5 +21,5 @@
         android:src="@drawable/compass"
         android:layout_row="3"
         android:layout_column="0"
-        android:onClick="sendMessage" />
+        android:onClick="startCompass" />
 </GridLayout>
