--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_my.xml
@@ -2,17 +2,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#ff1dbe97">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
         android:text="Click on the compass to start"
         android:layout_row="2"
         android:layout_column="0"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:autoText="false"
+        android:textSize="25dp"
+        android:textIsSelectable="false"
+        android:textColor="#ffffffff"
+        android:typeface="serif"
+        android:theme="@style/AppTheme" />
 
     <ImageButton
         android:layout_width="match_parent"
@@ -21,5 +28,7 @@
         android:src="@drawable/compass"
         android:layout_row="3"
         android:layout_column="0"
-        android:onClick="startCompass" />
+        android:onClick="startCompass"
+        android:background="#ff1dbe97"
+        android:cropToPadding="false" />
 </GridLayout>
