--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_start_compass.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/layout/activity_start_compass.xml
@@ -6,13 +6,16 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="com.example.alexander.mycompassmamn01.CompassActivity" >
+tools:context="com.example.alexander.mycompassmamn01.CompassActivity"
+    android:background="#ff1dbe97">
 
 <ImageView
     android:id="@+id/pointer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:src="@drawable/compass" />
+    android:src="@drawable/compass"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:cropToPadding="false" />
 
 </RelativeLayout>
